[metadata]
name = ceilometerdemo
summary = Demos Ceilometer trainings
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    ceilometerdemo

[entry_points]
ceilometer.poll.central = 
    demo.pollstermeter = ceilometerdemo.pollster.first:MyFirstPollster

ceilometer.discover =
    demo.discoverer = ceilometerdemo.pollster.first:MyFirstDiscoverer

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = ceilometerdemo/locale
domain = ceilometerdemo

[update_catalog]
domain = ceilometerdemo
output_dir = ceilometerdemo/locale
input_file = ceilometerdemo/locale/ceilometerdemo.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = ceilometerdemo/locale/ceilometerdemo.pot
